force-app/main/default/objects/Invoice__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <formula>Order__r.BillingCity</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>