force-app/main/default/objects/Invoice__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <formula>Order__r.BillingCountry</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>