force-app/main/default/objects/Invoice__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <formula>Order__r.BillingState</formula>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>