force-app/main/default/objects/Invoice__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <formula>Order__r.ShippingCity</formula>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>