force-app/main/default/objects/Invoice__c/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <formula>Order__r.ShippingCountry</formula>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>