force-app/main/default/objects/Invoice__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <formula>Order__r.ShippingPostalCode</formula>
    <label>Shipping Postal Code</label>
    <type>Text</type>
</CustomField>