force-app/main/default/objects/Invoice__c/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <formula>Order__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>